# rag-algo-solver

./: .gitignore  Makefile  alembic.ini  docker-compose.yml  pyproject.toml
.ai/: ENDPOINTS.md  FRONTEND.md  KAFKA_PIPELINE_ARCHITECTURE.md  PROJECT_STRUCTURE.md  default_promtp.md  openapi.yaml
.github/workflows/: lint.yml
app/: __main__.py  container.py
app/domain/models/: __init__.py  query.py
app/domain/repositories/: query.py  query_processing.py  task.py  user.py
app/domain/services/: __init__.py  auth_service.py  llm_client.py  prompt_composer.py  query_enricher.py  query_service.py  similar_task_searcher.py  task_context_builder.py
app/domain/services/enrichment/: block.py  pipeline.py
app/infrastructure/adapters/composer/: plain_prompt_composer.py
app/infrastructure/adapters/context/: plain_task_context_builder.py
app/infrastructure/adapters/enricher/: passthrough_query_enricher.py
app/infrastructure/adapters/llm/: echo_llm_client.py  (+1 more)
app/infrastructure/database/: models.py  session.py
app/presentation/api/: app.py
app/presentation/streams/: __main__.py  app.py
app/settings/: config.py  jwt.py  kafka.py  llm.py  postgres.py  qdrant.py  yandex_cloud.py
docker/: kafbat-ui.yml  kafka.yml  postgres.yml
front/: package-lock.json  package.json  server.js
front/public/: index.html
front/public/css/: style.css
front/public/js/: api.js  auth.js  queries.js
migrations/: env.py
migrations/versions/: a1b2c3d4e5f6_add_query_processing_table.py  b2c3d4e5f6a7_add_is_admin_to_users.py  dce56e4c70b2_create_initial_tables.py
utils/: env.py
(+19 files in other folders)
