[project]
name = "rag-algo-solver"
version = "0.1.0"
description = "Backend for algorithmic problem solver with RAG"
authors = [
    {name = "slash0t",email = "minenion2@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
